v0.1.0
    [3] send and receive over TCP socket
    [1] read and update object from flatbuffers