@@ -1,3 +1,4 @@
 v0.1.0
+    [5] reflection api to iterate over elements in property tree
     [3] send and receive over TCP socket
     [1] read and update object from flatbuffers
